--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -38,13 +38,18 @@ _ldadd_com      =
 # ---------------------
 _no_error_com   +=
 
-_define_com     +=
+_define_com     += -D_GNU_SOURCE
 
 _include_com    += -I$(top_srcdir)/include
 
 _sources_com    += \
-                   hy_calc.c    \
-                   hy_module.c
+				   dynamic_array.c          \
+				   format_cb.c              \
+				   hy_log.c                 \
+				   log_fifo.c               \
+				   process_handle_data.c    \
+				   process_single.c         \
+				   thread_specific_data.c
 
 _cppflags_com   += \
                    $(_no_error_com) \
