--- a/src/hy_log/Makefile.am
+++ b/src/hy_log/Makefile.am
@@ -45,6 +45,7 @@ _include_com    += \
                    -I$(top_srcdir)/include
 
 _sources_com    += \
+				   hy_log.c 				\
 				   dynamic_array.c          \
 				   format_cb.c              \
 				   log_fifo.c               \
