--- a/example/Makefile.am
+++ b/example/Makefile.am
@@ -45,6 +45,10 @@ if COMPILE_SELECT_LOG_TYPE_HY_LOG
 _include_com    += -I$(top_srcdir)/include/hy_log
 endif
 
+if COMPILE_SELECT_LOG_TYPE_LOG4CPLUS
+_include_com    += -I$(top_srcdir)/include/log4cplus
+endif
+
 _sources_com    +=
 
 _cppflags_com   += \
