--- a/include/zlog/Makefile.am
+++ b/include/zlog/Makefile.am
@@ -5,7 +5,7 @@
 # @file    Makefile.am
 # @brief   
 # @author  gnsyxiang <gnsyxiang@163.com>
-# @date    05/03 2021 10:35
+# @date    28/04 2023 15:25
 # @version v0.0.1
 # 
 # @since    note
@@ -13,24 +13,10 @@
 # 
 #     change log:
 #     NO.     Author              Date            Modified
-#     00      zhenquan.qiu        05/03 2021      create the file
+#     00      zhenquan.qiu        28/04 2023      create the file
 # 
-#     last modified: 05/03 2021 10:35
+#     last modified: 28/04 2023 15:25
 # ===============================================================
-
-SUBDIRS =
-
-if COMPILE_SELECT_LOG_TYPE_HY_LOG
-SUBDIRS += hy_log
-endif
-
-if COMPILE_SELECT_LOG_TYPE_LOG4CPLUS
-SUBDIRS += log4cplus
-endif
-
-if COMPILE_SELECT_LOG_TYPE_ZLOG
-SUBDIRS += zlog
-endif
 
 # ------------------
 # defining variables
@@ -45,10 +31,12 @@ install_includedir      = $(includedir)/@project_name@
 # ---------------------
 _no_install_headers_com +=
 
-_install_headers_com    +=
+_install_headers_com    += \
+						   hy_log.h
 
 # ------------------
 # make install files
 # ------------------
 noinst_HEADERS          = $(_no_install_headers_com)
 install_include_HEADERS = $(_install_headers_com)
+
