fix: fix output log with zlog

--- a/res/zlog.conf
+++ b/res/zlog.conf
@@ -36,5 +36,5 @@ simple = "%m"
 *.WARN          "%E(HOME)/log/zlog_warn.log",10MB * 10 ~ "%E(HOME)/log/zlog_warn.#r.log"; normal
 
 my_cat.*        >stderr ; normal
-my_cat.*        "%E(HOME)/log/zlog.log",10MB * 10 ~ "%E(HOME)/log/zlog.#r.log"; normal
+# my_cat.*        "%E(HOME)/log/zlog.log",10MB * 10 ~ "%E(HOME)/log/zlog.#r.log"; normal
 
