--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -58,11 +58,11 @@ _ldadd_com      += \
                    $(top_builddir)/src/lib@project_name@.la \
                    $(ldadd_com)
 
-bin_PROGRAMS            += hy_autotools_demo_lib_test
-hy_autotools_demo_lib_test_SOURCES    = $(_sources_com) main.c
-hy_autotools_demo_lib_test_CPPFLAGS   = $(_cppflags_com)
-hy_autotools_demo_lib_test_CFLAGS     = $(_cflags_com)
-hy_autotools_demo_lib_test_CXXFLAGS   = $(_cxxflags_com)
-hy_autotools_demo_lib_test_LDFLAGS    = $(_ldflags_com)
-hy_autotools_demo_lib_test_LDADD      = $(_ldadd_com)
+# bin_PROGRAMS            += hy_autotools_demo_lib_test
+# hy_autotools_demo_lib_test_SOURCES    = $(_sources_com) main.c
+# hy_autotools_demo_lib_test_CPPFLAGS   = $(_cppflags_com)
+# hy_autotools_demo_lib_test_CFLAGS     = $(_cflags_com)
+# hy_autotools_demo_lib_test_CXXFLAGS   = $(_cxxflags_com)
+# hy_autotools_demo_lib_test_LDFLAGS    = $(_ldflags_com)
+# hy_autotools_demo_lib_test_LDADD      = $(_ldadd_com)
 
