--- a/example/Makefile.am
+++ b/example/Makefile.am
@@ -39,18 +39,18 @@ _no_error_com   +=
 
 _define_com     +=
 
-_include_com    += -I$(top_srcdir)/include
+_include_com    += -I$(top_srcdir)/include/$(run_os)
 
 if COMPILE_SELECT_LOG_TYPE_HY_LOG
-_include_com    += -I$(top_srcdir)/include/hy_log
+_include_com    += -I$(top_srcdir)/include/$(run_os)/hy_log
 endif
 
 if COMPILE_SELECT_LOG_TYPE_LOG4CPLUS
-_include_com    += -I$(top_srcdir)/include/log4cplus
+_include_com    += -I$(top_srcdir)/include/$(run_os)/log4cplus
 endif
 
 if COMPILE_SELECT_LOG_TYPE_ZLOG
-_include_com    += -I$(top_srcdir)/include/zlog
+_include_com    += -I$(top_srcdir)/include/$(run_os)/zlog
 endif
 
 _sources_com    +=
