--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -5,7 +5,7 @@
 # @file    Makefile.am
 # @brief   
 # @author  gnsyxiang <gnsyxiang@163.com>
-# @date    05/03 2021 10:35
+# @date    17/08 2023 11:51
 # @version v0.0.1
 # 
 # @since    note
@@ -13,42 +13,10 @@
 # 
 #     change log:
 #     NO.     Author              Date            Modified
-#     00      zhenquan.qiu        05/03 2021      create the file
+#     00      zhenquan.qiu        17/08 2023      create the file
 # 
-#     last modified: 05/03 2021 10:35
+#     last modified: 17/08 2023 11:51
 # ===============================================================
 
-SUBDIRS =
+SUBDIRS = $(run_os)
 
-if COMPILE_SELECT_LOG_TYPE_HY_LOG
-SUBDIRS += hy_log
-endif
-
-if COMPILE_SELECT_LOG_TYPE_LOG4CPLUS
-SUBDIRS += log4cplus
-endif
-
-if COMPILE_SELECT_LOG_TYPE_ZLOG
-SUBDIRS += zlog
-endif
-
-# ------------------
-# defining variables
-# ------------------
-_no_install_headers_com =
-_install_headers_com    =
-
-install_includedir      = $(includedir)/@project_name@
-
-# ---------------------
-# add necessary content
-# ---------------------
-_no_install_headers_com +=
-
-_install_headers_com    +=
-
-# ------------------
-# make install files
-# ------------------
-noinst_HEADERS          = $(_no_install_headers_com)
-install_include_HEADERS = $(_install_headers_com)
