--- a/src/linux/hy_log/Makefile.am
+++ b/src/linux/hy_log/Makefile.am
@@ -41,7 +41,8 @@ _no_error_com   +=
 _define_com     += -D_GNU_SOURCE
 
 _include_com    += \
-                   -I$(top_srcdir)/include/hy_log \
+                   -I$(top_srcdir)/include/$(run_os)/hy_log \
+                   -I$(top_srcdir)/include/$(run_os) \
                    -I$(top_srcdir)/include
 
 _sources_com    += \
