--- a/src/linux/Makefile.am
+++ b/src/linux/Makefile.am
@@ -54,13 +54,15 @@ _no_error_com   +=
 
 _define_com     += -D_GNU_SOURCE
 
-_include_com    += -I$(top_srcdir)/include
+_include_com    += \
+                   -I$(top_srcdir)/include/$(run_os) \
+                   -I$(top_srcdir)/include
 
 _sources_com    +=
 
 _cppflags_com   += \
                    $(_no_error_com) \
-                   $(_include_com)  \
+                   $(_include_com) \
                    $(_define_com)
 
 _cflags_com     +=
