--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -34,7 +34,8 @@ install_includedir      = $(includedir)/@project_name@
 _no_install_headers_com +=
 
 _install_headers_com    += \
-                           hy_type.h
+                           hy_type.h \
+                           hy_printf.h
 
 # ------------------
 # make install files
