--- a/include/linux/hy_log/Makefile.am
+++ b/include/linux/hy_log/Makefile.am
@@ -39,8 +39,7 @@ _no_install_headers_com += \
                            thread_specific_data.h
 
 _install_headers_com    += \
-                           hy_log.h     \
-                           hy_printf.h
+                           hy_log.h
 
 # ------------------
 # make install files
