fix: fix compile bug for zlog

--- a/src/linux/zlog/Makefile.am
+++ b/src/linux/zlog/Makefile.am
@@ -41,11 +41,12 @@ _no_error_com   +=
 _define_com     += -D_GNU_SOURCE
 
 _include_com    += \
-                   -I$(top_srcdir)/include/zlog \
+                   -I$(top_srcdir)/include/$(run_os)/zlog \
+                   -I$(top_srcdir)/include/$(run_os) \
                    -I$(top_srcdir)/include
 
 _sources_com    += \
-				   hy_zlog.c
+                   hy_zlog.c
 
 _cppflags_com   += \
                    $(_no_error_com) \
