--- a/res/zlog.conf
+++ b/res/zlog.conf
@@ -28,13 +28,15 @@ buffer max = 2MB
 
 [formats]
 normal = "%d(%F %T).%ms %v [%F:%L %U(0x%t)] %m"
+normal_1 = "%d(%T).%ms %v [%F:%L] %m"
 simple = "%m"
 
 [rules]
 # *.ERROR        "%E(HOME)/log/zlog_error.%p.%d(%F).log",10MB * 10 ~ "%E(HOME)/log/zlog_error.%p.%d(%F).#r.log"; normal
 # *.ERROR         "%E(HOME)/log/zlog_error.log",10MB * 10 ~ "%E(HOME)/log/zlog_error.#r.log"; normal
-*.WARN          "%E(HOME)/log/zlog_warn.log",10MB * 10 ~ "%E(HOME)/log/zlog_warn.#r.log"; normal
+#*.WARN          "%E(HOME)/log/zlog_warn.log",10MB * 10 ~ "%E(HOME)/log/zlog_warn.#r.log"; normal
 
-my_cat.*        >stderr ; normal
-# my_cat.*        "%E(HOME)/log/zlog.log",10MB * 10 ~ "%E(HOME)/log/zlog.#r.log"; normal
+my_cat.NOTICE 	>stderr ; normal_1
+my_cat.NOTICE   "./zlog/zlog.%p.%d(%F).log",10MB * 10 ~ "./zlog/zlog.%p.%d(%F).#r.log"; normal
+*.WARN 		"./zlog/zlog_warn.%p.%d(%F).log",10MB * 10 ~ "./zlog/zlog_warn.%p.%d(%F).#r.log"; normal
 
