perf: refactor uart output

--- a/src/linux/hy_log/Makefile.am
+++ b/src/linux/hy_log/Makefile.am
@@ -46,13 +46,12 @@ _include_com    += \
                    -I$(top_srcdir)/include
 
 _sources_com    += \
-                   hy_log.c                 \
-                   dynamic_array.c          \
-                   format_cb.c              \
-                   log_fifo.c               \
-                   process_handle_data.c    \
-                   process_single.c         \
-                   thread_specific_data.c
+                   uart.c \
+                   hy_log.c \
+                   dynamic_array.c \
+                   format_cb.c \
+                   log_fifo.c \
+                   thread_specific.c
 
 _cppflags_com   += \
                    $(_no_error_com) \
