build: using different library configuration files

--- a/Makefile.am
+++ b/Makefile.am
@@ -55,18 +55,14 @@ export ldadd_com
 # make install files
 # ------------------
 _install_files_com  += \
-                       LICENSE                  \
+                       LICENSE \
                        README.md
 dist_doc_DATA       = $(_install_files_com)
-pkgconfig_DATA      = @project_name@.pc
 
 # ---------------
 # make dist files
 # ---------------
 _dist_files_com     += \
-                       autogen.sh               \
-                       build.sh                 \
-                       @project_name@.pc.in
+                       autogen.sh \
+                       build.sh
 EXTRA_DIST          = $(_dist_files_com)
-
-DISTCLEANFILES = @project_name@.pc
