--- a/src/linux/zlog/Makefile.am
+++ b/src/linux/zlog/Makefile.am
@@ -68,3 +68,15 @@ libhy_zlog_la_CXXFLAGS     = $(_cxxflags_com)
 libhy_zlog_la_LDFLAGS      = $(_ldflags_com)
 libhy_zlog_la_LIBADD       = $(_ldadd_com)
 
+# ------------------
+# make install files
+# ------------------
+pkgconfig_DATA      = @project_name@.pc
+
+# ---------------
+# make dist files
+# ---------------
+_dist_files_com     = @project_name@.pc.in
+EXTRA_DIST          = $(_dist_files_com)
+
+DISTCLEANFILES      = @project_name@.pc
