--- a/example/windows/Makefile.am
+++ b/example/windows/Makefile.am
@@ -43,18 +43,6 @@ _include_com    += \
                    -I$(top_srcdir)/include/$(run_os) \
                    -I$(top_srcdir)/include
 
-if COMPILE_SELECT_LOG_TYPE_HY_LOG
-_include_com    += -I$(top_srcdir)/include/$(run_os)/hy_log
-endif
-
-if COMPILE_SELECT_LOG_TYPE_LOG4CPLUS
-_include_com    += -I$(top_srcdir)/include/$(run_os)/log4cplus
-endif
-
-if COMPILE_SELECT_LOG_TYPE_ZLOG
-_include_com    += -I$(top_srcdir)/include/$(run_os)/zlog
-endif
-
 _sources_com    +=
 
 _cppflags_com   += \
@@ -69,7 +57,7 @@ _cxxflags_com   +=
 _ldflags_com    +=
 
 _ldadd_com      += \
-                   $(top_builddir)/src/lib@project_name@.la \
+                   $(top_builddir)/src/$(run_os)/lib@project_name@.la \
                    $(ldadd_com)
 
 bin_PROGRAMS            += hy_log_demo
