--- a/src/linux/Makefile.am
+++ b/src/linux/Makefile.am
@@ -18,21 +18,7 @@
 #     last modified: 14/12 2023 16:49
 # ===============================================================
 
-SUBDIRS =
-
-noinst_LTLIBRARIES = lib@project_name@_@run_os@.la
-
-if COMPILE_SELECT_LOG_TYPE_HY_LOG
-SUBDIRS += hy_log
-endif
-
-if COMPILE_SELECT_LOG_TYPE_LOG4CPLUS
-SUBDIRS += log4cplus
-endif
-
-if COMPILE_SELECT_LOG_TYPE_ZLOG
-SUBDIRS += zlog
-endif
+lib_LTLIBRARIES = lib@project_name@.la
 
 # ------------------
 # defining variables
@@ -58,7 +44,14 @@ _include_com    += \
                    -I$(top_srcdir)/include/$(run_os) \
                    -I$(top_srcdir)/include
 
-_sources_com    +=
+_sources_com    += \
+                   dynamic_array.c \
+                   format_cb.c \
+                   hy_log.c \
+                   log_fifo.c \
+                   net.c \
+                   thread_specific.c \
+                   uart.c
 
 _cppflags_com   += \
                    $(_no_error_com) \
@@ -69,23 +62,17 @@ _cflags_com     +=
 
 _cxxflags_com   +=
 
+_ldflags_com    += -version-info @current@:@revision@:@age@
+
+if !COMPILE_DEBUG_INFO
+_ldflags_com    += -export-symbols-regex 'Hy*'
+endif
+
 _ldadd_com      += $(ldadd_com)
 
-if COMPILE_SELECT_LOG_TYPE_HY_LOG
-_ldadd_com      += $(top_builddir)/src/$(run_os)/hy_log/libhy_loger.la
-endif
-
-if COMPILE_SELECT_LOG_TYPE_LOG4CPLUS
-_ldadd_com      += $(top_builddir)/src/$(run_os)/log4cplus/libhy_log4cplus.la
-endif
-
-if COMPILE_SELECT_LOG_TYPE_ZLOG
-_ldadd_com      += $(top_builddir)/src/$(run_os)/zlog/libhy_zlog.la
-endif
-
-lib@project_name@_@run_os@_la_SOURCES    = $(_sources_com)
-lib@project_name@_@run_os@_la_CPPFLAGS   = $(_cppflags_com)
-lib@project_name@_@run_os@_la_CFLAGS     = $(_cflags_com)
-lib@project_name@_@run_os@_la_CXXFLAGS   = $(_cxxflags_com)
-lib@project_name@_@run_os@_la_LDFLAGS    = $(_ldflags_com)
-lib@project_name@_@run_os@_la_LIBADD     = $(_ldadd_com)
+lib@project_name@_la_SOURCES    = $(_sources_com)
+lib@project_name@_la_CPPFLAGS   = $(_cppflags_com)
+lib@project_name@_la_CFLAGS     = $(_cflags_com)
+lib@project_name@_la_CXXFLAGS   = $(_cxxflags_com)
+lib@project_name@_la_LDFLAGS    = $(_ldflags_com)
+lib@project_name@_la_LIBADD     = $(_ldadd_com)
