fix: remove hy_type.h

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -34,8 +34,7 @@ install_includedir      = $(includedir)/@project_name@
 _no_install_headers_com += \
                            printf_my.h
 
-_install_headers_com    += \
-                           hy_type.h
+_install_headers_com    +=
 
 # ------------------
 # make install files
