--- a/build-script/rock-chips/rk3568/Makefile.am
+++ b/build-script/rock-chips/rk3568/Makefile.am
@@ -5,7 +5,7 @@
 # @file    Makefile.am
 # @brief   
 # @author  gnsyxiang <gnsyxiang@163.com>
-# @date    19/04 2023 09:13
+# @date    26/01 2024 16:39
 # @version v0.0.1
 # 
 # @since    note
@@ -13,9 +13,9 @@
 # 
 #     change log:
 #     NO.     Author              Date            Modified
-#     00      zhenquan.qiu        19/04 2023      create the file
+#     00      zhenquan.qiu        26/01 2024      create the file
 # 
-#     last modified: 19/04 2023 09:13
+#     last modified: 26/01 2024 16:39
 # ===============================================================
 
 # ------------------
@@ -41,12 +41,30 @@ dist-hook:
 		sed -i 's/product=.*/product=$(product)/g' $(top_distdir)/build-script/$(vender)/$(chip)/config.sh; \
 		sed -i 's/language=.*/language=$(language)/g' $(top_distdir)/build-script/$(vender)/$(chip)/config.sh; \
 		\
+		sed -i '/test/d' $(top_distdir)/configure.ac; \
+		sed -i '/project_name.pc/a test/$(run_os)/Makefile' $(top_distdir)/configure.ac; \
+		sed -i '/project_name.pc/a test/Makefile' $(top_distdir)/configure.ac; \
+		\
+		sed -i '/res/d' $(top_distdir)/configure.ac; \
+		sed -i '/project_name.pc/a res/Makefile' $(top_distdir)/configure.ac; \
+		\
+		sed -i '/src/d' $(top_distdir)/configure.ac; \
+		sed -i '/project_name.pc/a src/$(run_os)/Makefile' $(top_distdir)/configure.ac; \
+		sed -i '/project_name.pc/a src/Makefile' $(top_distdir)/configure.ac; \
+		\
+		sed -i '/include/d' $(top_distdir)/configure.ac; \
+		sed -i '/project_name.pc/a include/$(run_os)/Makefile' $(top_distdir)/configure.ac; \
+		sed -i '/project_name.pc/a include/Makefile' $(top_distdir)/configure.ac; \
+		\
+		sed -i '/example/d' $(top_distdir)/configure.ac; \
+		sed -i '/project_name.pc/a example/$(run_os)/Makefile' $(top_distdir)/configure.ac; \
+		sed -i '/project_name.pc/a example/Makefile' $(top_distdir)/configure.ac; \
+		\
 		sed -i '/build-script/d' $(top_distdir)/configure.ac; \
 		sed -i '/project_name.pc/a build-script/$(vender)/$(chip)/Makefile' $(top_distdir)/configure.ac; \
 		sed -i '/project_name.pc/a build-script/$(vender)/Makefile' $(top_distdir)/configure.ac; \
 		sed -i '/project_name.pc/a build-script/Makefile' $(top_distdir)/configure.ac; \
 		\
-		sed -i '/res\/voice/d' $(top_distdir)/configure.ac; \
-		sed -i '/project_name.pc/a res/voice/Makefile' $(top_distdir)/configure.ac; \
-		sed -i '/project_name.pc/a res/voice/$(language)/Makefile' $(top_distdir)/configure.ac
-
+		sed -i 's/doc\/Makefile/doc\/Makefile])/g' $(top_distdir)/configure.ac; \
+		\
+		sed -i '/AC_INIT/i m4_include([m4/check_project_info.m4])' $(top_distdir)/configure.ac
