--- a/src/freertos/Makefile.am
+++ b/src/freertos/Makefile.am
@@ -5,7 +5,7 @@
 # @file    Makefile.am
 # @brief   
 # @author  gnsyxiang <gnsyxiang@163.com>
-# @date    14/12 2023 16:52
+# @date    01/02 2024 10:26
 # @version v0.0.1
 # 
 # @since    note
@@ -13,10 +13,12 @@
 # 
 #     change log:
 #     NO.     Author              Date            Modified
-#     00      zhenquan.qiu        14/12 2023      create the file
+#     00      zhenquan.qiu        01/02 2024      create the file
 # 
-#     last modified: 14/12 2023 16:52
+#     last modified: 01/02 2024 10:26
 # ===============================================================
+
+noinst_LTLIBRARIES = lib@project_name@_@run_os@.la
 
 # ------------------
 # defining variables
@@ -30,22 +32,19 @@ _cflags_com     =
 _cxxflags_com   =
 _ldflags_com    =
 _ldadd_com      =
-bin_PROGRAMS    =
 
 # ---------------------
 # add necessary content
 # ---------------------
 _no_error_com   +=
 
-_define_com     +=
+_define_com     += -D_GNU_SOURCE
 
 _include_com    += \
                    -I$(top_srcdir)/include/$(run_os) \
                    -I$(top_srcdir)/include
 
-_sources_com    += \
-                   hy_calc_test.c \
-                   hy_module_test.c
+_sources_com    +=
 
 _cppflags_com   += \
                    $(_no_error_com) \
@@ -56,8 +55,11 @@ _cflags_com     +=
 
 _cxxflags_com   +=
 
-_ldflags_com    +=
+_ldadd_com      += $(ldadd_com)
 
-_ldadd_com      += \
-                   $(top_builddir)/src/$(run_os)/lib@project_name@.la \
-                   $(ldadd_com)
+lib@project_name@_@run_os@_la_SOURCES    = $(_sources_com)
+lib@project_name@_@run_os@_la_CPPFLAGS   = $(_cppflags_com)
+lib@project_name@_@run_os@_la_CFLAGS     = $(_cflags_com)
+lib@project_name@_@run_os@_la_CXXFLAGS   = $(_cxxflags_com)
+lib@project_name@_@run_os@_la_LDFLAGS    = $(_ldflags_com)
+lib@project_name@_@run_os@_la_LIBADD     = $(_ldadd_com)
