build: update build script for esp32

--- a/example/mcu/esp32/test-hy_log/main/CMakeLists.txt
+++ b/example/mcu/esp32/test-hy_log/main/CMakeLists.txt
@@ -3,4 +3,4 @@ idf_component_register(SRCS "main.c"
 
 target_include_directories(${COMPONENT_LIB} PUBLIC "/mnt/nfs/esp32/esp32/include")
 target_link_directories(${COMPONENT_LIB} PUBLIC /mnt/nfs/esp32/esp32/lib/)
-target_link_libraries(${COMPONENT_LIB} PRIVATE hy_log)
+target_link_libraries(${COMPONENT_LIB} PRIVATE hy_os hy_log hy_os_type)
