--- a/example/freertos/Makefile.am
+++ b/example/freertos/Makefile.am
@@ -57,5 +57,5 @@ _cxxflags_com   +=
 _ldflags_com    +=
 
 _ldadd_com      += \
-                   $(top_builddir)/src/lib@project_name@.la \
+                   $(top_builddir)/src/lib$(project_name).la \
                    $(ldadd_com)
